fix trade and statistic
