# Application/Trades/Models/LatestSignalFilter.cs
@@ -1,0 +1,16 @@
+using System.Text.Json.Serialization;
+
+namespace Application.Trades.Models;
+
+public sealed class LatestSignalFilter
+{
+	public SignalDirection? Direction { get; set; }
+}
+
+[JsonConverter(typeof(JsonStringEnumConverter))]
+public enum SignalDirection
+{
+	BUY,
+
+	SELL,
+}
